<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_aboutus"
        android:icon="@drawable/ic_action_about"
        android:title="@string/menu_aboutus"
        android:orderInCategory="1"
        app:showAsAction="always" />


    <item
        android:id="@+id/menu_my_page"
        android:icon="@drawable/ic_action_person"
        android:orderInCategory="1"
        android:title="@string/menu_minsida"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/home_ligth2"
        android:orderInCategory="1"
        android:title="@string/menu_home"
        app:showAsAction="always" />

</menu>