<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="100"
        android:title="@string/menu_settings"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_my_page"
        android:icon="@drawable/ic_action_person"
        android:orderInCategory="1"
        android:title="@string/menu_my_page"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/icon_home"
        android:orderInCategory="1"
        android:title="@string/menu_home"
        app:showAsAction="always" />


</menu>