<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="androids.growup.MyPageActivity">

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="100"
        android:title="@string/menu_settings"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_aboutus"
        android:icon="@drawable/ic_action_about"
        android:orderInCategory="1"
        android:title="@string/menu_aboutus"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/icon_home"
        android:orderInCategory="1"
        android:title="@string/menu_home"
        app:showAsAction="always" />


</menu>
