<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:id="@+id/plant_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="sans"
        android:layout_gravity="center_horizontal" />

    <ImageView
        android:id="@+id/plant_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp" />

    <TextView
        android:id="@+id/latin_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="15sp"
        android:textStyle="italic"
        android:layout_gravity="center_horizontal"
        android:typeface="sans" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rubrik_difficulty"
        android:layout_weight="0.5"
        android:textStyle="bold"
        android:paddingLeft="5dp"/>

    <ImageView
        android:id="@+id/diff_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="5dp" />

      <TextView
        android:id="@+id/plant_difficulty"
        android:layout_weight="0.5"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="#ffb8251a"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rubrik_info"
                android:textStyle="bold"
                android:paddingLeft="5dp"
                />

            <TextView
                android:id="@+id/plant_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="15sp"
                android:typeface="sans" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rubrik_how_to"
                android:textStyle="bold"
                android:paddingLeft="5dp"
                />

            <TextView
                android:id="@+id/plant_how_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rubrik_usage"
                android:textStyle="bold"
                android:paddingLeft="5dp"
                />

            <TextView
                android:id="@+id/plant_usage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rubrik_good_to_know"
                android:textStyle="bold"
                android:paddingLeft="5dp"
                />

            <TextView
                android:id="@+id/plant_good_to_know"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rubrik_harvest"
                android:textStyle="bold"
                android:paddingLeft="5dp"
                />

            <TextView
                android:id="@+id/plant_harvest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="15sp"
                />
<!--
            <TextView
                android:id="@+id/plant_habitat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textStyle="bold"
                android:typeface="sans" />
-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rubrik_link"
                android:textStyle="bold"
                android:paddingLeft="5dp"
                />

            <TextView
                android:id="@+id/plant_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:padding="5dp"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>